tests/some-site/monitoring/prometheus/deployment.yaml
"apiVersion": "apps/v1"
"kind": "Deployment"
"metadata":
  "name": "prometheus"
  "namespace": "monitoring"
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "name": "prometheus"
  "strategy":
    "type": "Recreate"
  "template":
    "metadata":
      "labels":
        "name": "prometheus"
    "spec":
      "containers":
      - "args":
        - "--config.file=/etc/prometheus/prometheus.yaml"
        - "--log.level=info"
        - "--storage.tsdb.path=/prometheus"
        - "--web.enable-lifecycle"
        - "--web.enable-admin-api"
        - "--web.external-url=http://prometheus.example.com"
        "image": "prom/prometheus:v2.15.2"
        "name": "prometheus"
        "volumeMounts":
        - "mountPath": "/prometheus"
          "name": "prometheus"
        - "mountPath": "/etc/prometheus"
          "name": "config"
      - "args":
        - "-volume-dir"
        - "/volume"
        - "-webhook-url"
        - "http://localhost:9090/-/reload"
        "image": "jimmidyson/configmap-reload:v0.3.0"
        "name": "reloader"
        "volumeMounts":
        - "mountPath": "/volume"
          "name": "config"
      "securityContext":
        "fsGroup": 1000
        "runAsUser": 1000
      "serviceAccountName": "prometheus"
      "volumes":
      - "name": "prometheus"
        "persistentVolumeClaim":
          "claimName": "prometheus"
      - "configMap":
          "name": "prometheus"
        "name": "config"
