tests/some-site/monitoring/prometheus/ingress.yaml
"apiVersion": "extensions/v1beta1"
"kind": "Ingress"
"metadata":
  "name": "prometheus"
  "namespace": "monitoring"
"spec":
  "rules":
  - "host": "prometheus.example.com"
    "http":
      "paths":
      - "backend":
          "serviceName": "prometheus"
          "servicePort": 9090
        "path": "/"
