tests/some-site/monitoring/prometheus/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "prometheus"
  "namespace": "monitoring"
"spec":
  "ports":
  - "name": "http"
    "port": 9090
    "targetPort": 9090
  "selector":
    "name": "prometheus"
